2nd year/Compilers/lab1/parser.output
   0  $accept : %entry% $end

   1  program : BEGIN stmts END DOT

   2  stmts : stmt_list

   3  stmt_list : stmt
   4            | stmt SEMI stmt_list

   5  stmt :
   6       | name ASSIGN expr
   7       | PRINT expr
   8       | NEWLINE
   9       | IF expr THEN stmts END
  10       | IF expr THEN stmts ELSE stmts END
  11       | WHILE expr DO stmts END
  12       | REPEAT stmts UNTIL expr
  13       | LOOP stmts END
  14       | EXIT
  15       | CASE expr OF cases END
  16       | CASE expr OF cases ELSE stmts END

  17  cases :
  18        | case
  19        | case VBAR cases

  20  case : numbers COLON stmts

  21  numbers : NUMBER
  22          | NUMBER COMMA numbers

  23  expr : simple
  24       | expr RELOP simple

  25  simple : term
  26         | simple ADDOP term
  27         | simple MINUS term

  28  term : factor
  29       | term MULOP factor

  30  factor : name
  31         | NUMBER
  32         | MONOP factor
  33         | MINUS factor
  34         | LPAR expr RPAR

  35  name : IDENT

  36  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (36)

	BEGIN  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : BEGIN . stmts END DOT  (1)
	stmt : .  (5)

	IDENT  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	NEWLINE  shift 9
	REPEAT  shift 10
	LOOP  shift 11
	EXIT  shift 12
	CASE  shift 13
	SEMI  reduce 5
	END  reduce 5

	stmts  goto 14
	stmt_list  goto 15
	stmt  goto 16
	name  goto 17


state 4
	%entry% : '\001' program .  (36)

	.  reduce 36


state 5
	name : IDENT .  (35)

	.  reduce 35


state 6
	stmt : IF . expr THEN stmts END  (9)
	stmt : IF . expr THEN stmts ELSE stmts END  (10)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	expr  goto 23
	simple  goto 24
	term  goto 25
	factor  goto 26


state 7
	stmt : WHILE . expr DO stmts END  (11)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	expr  goto 27
	simple  goto 24
	term  goto 25
	factor  goto 26


state 8
	stmt : PRINT . expr  (7)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	expr  goto 28
	simple  goto 24
	term  goto 25
	factor  goto 26


state 9
	stmt : NEWLINE .  (8)

	.  reduce 8


state 10
	stmt : REPEAT . stmts UNTIL expr  (12)
	stmt : .  (5)

	IDENT  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	NEWLINE  shift 9
	REPEAT  shift 10
	LOOP  shift 11
	EXIT  shift 12
	CASE  shift 13
	SEMI  reduce 5
	UNTIL  reduce 5

	stmts  goto 29
	stmt_list  goto 15
	stmt  goto 16
	name  goto 17


state 11
	stmt : LOOP . stmts END  (13)
	stmt : .  (5)

	IDENT  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	NEWLINE  shift 9
	REPEAT  shift 10
	LOOP  shift 11
	EXIT  shift 12
	CASE  shift 13
	SEMI  reduce 5
	END  reduce 5

	stmts  goto 30
	stmt_list  goto 15
	stmt  goto 16
	name  goto 17


state 12
	stmt : EXIT .  (14)

	.  reduce 14


state 13
	stmt : CASE . expr OF cases END  (15)
	stmt : CASE . expr OF cases ELSE stmts END  (16)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	expr  goto 31
	simple  goto 24
	term  goto 25
	factor  goto 26


state 14
	program : BEGIN stmts . END DOT  (1)

	END  shift 32
	.  error


state 15
	stmts : stmt_list .  (2)

	.  reduce 2


state 16
	stmt_list : stmt .  (3)
	stmt_list : stmt . SEMI stmt_list  (4)

	SEMI  shift 33
	VBAR  reduce 3
	ELSE  reduce 3
	END  reduce 3
	UNTIL  reduce 3


state 17
	stmt : name . ASSIGN expr  (6)

	ASSIGN  shift 34
	.  error


state 18
	factor : MONOP . factor  (32)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	factor  goto 35


state 19
	factor : NUMBER .  (31)

	.  reduce 31


state 20
	factor : LPAR . expr RPAR  (34)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	expr  goto 36
	simple  goto 24
	term  goto 25
	factor  goto 26


state 21
	factor : MINUS . factor  (33)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	factor  goto 37


state 22
	factor : name .  (30)

	.  reduce 30


state 23
	stmt : IF expr . THEN stmts END  (9)
	stmt : IF expr . THEN stmts ELSE stmts END  (10)
	expr : expr . RELOP simple  (24)

	RELOP  shift 38
	THEN  shift 39
	.  error


state 24
	expr : simple .  (23)
	simple : simple . ADDOP term  (26)
	simple : simple . MINUS term  (27)

	ADDOP  shift 40
	MINUS  shift 41
	RELOP  reduce 23
	SEMI  reduce 23
	RPAR  reduce 23
	VBAR  reduce 23
	DO  reduce 23
	ELSE  reduce 23
	END  reduce 23
	THEN  reduce 23
	UNTIL  reduce 23
	OF  reduce 23


state 25
	simple : term .  (25)
	term : term . MULOP factor  (29)

	MULOP  shift 42
	ADDOP  reduce 25
	RELOP  reduce 25
	SEMI  reduce 25
	RPAR  reduce 25
	MINUS  reduce 25
	VBAR  reduce 25
	DO  reduce 25
	ELSE  reduce 25
	END  reduce 25
	THEN  reduce 25
	UNTIL  reduce 25
	OF  reduce 25


state 26
	term : factor .  (28)

	.  reduce 28


state 27
	stmt : WHILE expr . DO stmts END  (11)
	expr : expr . RELOP simple  (24)

	RELOP  shift 38
	DO  shift 43
	.  error


state 28
	stmt : PRINT expr .  (7)
	expr : expr . RELOP simple  (24)

	RELOP  shift 38
	SEMI  reduce 7
	VBAR  reduce 7
	ELSE  reduce 7
	END  reduce 7
	UNTIL  reduce 7


state 29
	stmt : REPEAT stmts . UNTIL expr  (12)

	UNTIL  shift 44
	.  error


state 30
	stmt : LOOP stmts . END  (13)

	END  shift 45
	.  error


state 31
	stmt : CASE expr . OF cases END  (15)
	stmt : CASE expr . OF cases ELSE stmts END  (16)
	expr : expr . RELOP simple  (24)

	RELOP  shift 38
	OF  shift 46
	.  error


state 32
	program : BEGIN stmts END . DOT  (1)

	DOT  shift 47
	.  error


state 33
	stmt_list : stmt SEMI . stmt_list  (4)
	stmt : .  (5)

	IDENT  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	NEWLINE  shift 9
	REPEAT  shift 10
	LOOP  shift 11
	EXIT  shift 12
	CASE  shift 13
	SEMI  reduce 5
	VBAR  reduce 5
	ELSE  reduce 5
	END  reduce 5
	UNTIL  reduce 5

	stmt_list  goto 48
	stmt  goto 16
	name  goto 17


state 34
	stmt : name ASSIGN . expr  (6)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	expr  goto 49
	simple  goto 24
	term  goto 25
	factor  goto 26


state 35
	factor : MONOP factor .  (32)

	.  reduce 32


state 36
	expr : expr . RELOP simple  (24)
	factor : LPAR expr . RPAR  (34)

	RELOP  shift 38
	RPAR  shift 50
	.  error


state 37
	factor : MINUS factor .  (33)

	.  reduce 33


state 38
	expr : expr RELOP . simple  (24)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	simple  goto 51
	term  goto 25
	factor  goto 26


state 39
	stmt : IF expr THEN . stmts END  (9)
	stmt : IF expr THEN . stmts ELSE stmts END  (10)
	stmt : .  (5)

	IDENT  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	NEWLINE  shift 9
	REPEAT  shift 10
	LOOP  shift 11
	EXIT  shift 12
	CASE  shift 13
	SEMI  reduce 5
	ELSE  reduce 5
	END  reduce 5

	stmts  goto 52
	stmt_list  goto 15
	stmt  goto 16
	name  goto 17


state 40
	simple : simple ADDOP . term  (26)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	term  goto 53
	factor  goto 26


state 41
	simple : simple MINUS . term  (27)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	term  goto 54
	factor  goto 26


state 42
	term : term MULOP . factor  (29)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	factor  goto 55


state 43
	stmt : WHILE expr DO . stmts END  (11)
	stmt : .  (5)

	IDENT  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	NEWLINE  shift 9
	REPEAT  shift 10
	LOOP  shift 11
	EXIT  shift 12
	CASE  shift 13
	SEMI  reduce 5
	END  reduce 5

	stmts  goto 56
	stmt_list  goto 15
	stmt  goto 16
	name  goto 17


state 44
	stmt : REPEAT stmts UNTIL . expr  (12)

	IDENT  shift 5
	MONOP  shift 18
	NUMBER  shift 19
	LPAR  shift 20
	MINUS  shift 21
	.  error

	name  goto 22
	expr  goto 57
	simple  goto 24
	term  goto 25
	factor  goto 26


state 45
	stmt : LOOP stmts END .  (13)

	.  reduce 13


state 46
	stmt : CASE expr OF . cases END  (15)
	stmt : CASE expr OF . cases ELSE stmts END  (16)
	cases : .  (17)

	NUMBER  shift 58
	ELSE  reduce 17
	END  reduce 17

	cases  goto 59
	case  goto 60
	numbers  goto 61


state 47
	program : BEGIN stmts END DOT .  (1)

	.  reduce 1


state 48
	stmt_list : stmt SEMI stmt_list .  (4)

	.  reduce 4


state 49
	stmt : name ASSIGN expr .  (6)
	expr : expr . RELOP simple  (24)

	RELOP  shift 38
	SEMI  reduce 6
	VBAR  reduce 6
	ELSE  reduce 6
	END  reduce 6
	UNTIL  reduce 6


state 50
	factor : LPAR expr RPAR .  (34)

	.  reduce 34


state 51
	expr : expr RELOP simple .  (24)
	simple : simple . ADDOP term  (26)
	simple : simple . MINUS term  (27)

	ADDOP  shift 40
	MINUS  shift 41
	RELOP  reduce 24
	SEMI  reduce 24
	RPAR  reduce 24
	VBAR  reduce 24
	DO  reduce 24
	ELSE  reduce 24
	END  reduce 24
	THEN  reduce 24
	UNTIL  reduce 24
	OF  reduce 24


state 52
	stmt : IF expr THEN stmts . END  (9)
	stmt : IF expr THEN stmts . ELSE stmts END  (10)

	ELSE  shift 62
	END  shift 63
	.  error


state 53
	simple : simple ADDOP term .  (26)
	term : term . MULOP factor  (29)

	MULOP  shift 42
	ADDOP  reduce 26
	RELOP  reduce 26
	SEMI  reduce 26
	RPAR  reduce 26
	MINUS  reduce 26
	VBAR  reduce 26
	DO  reduce 26
	ELSE  reduce 26
	END  reduce 26
	THEN  reduce 26
	UNTIL  reduce 26
	OF  reduce 26


state 54
	simple : simple MINUS term .  (27)
	term : term . MULOP factor  (29)

	MULOP  shift 42
	ADDOP  reduce 27
	RELOP  reduce 27
	SEMI  reduce 27
	RPAR  reduce 27
	MINUS  reduce 27
	VBAR  reduce 27
	DO  reduce 27
	ELSE  reduce 27
	END  reduce 27
	THEN  reduce 27
	UNTIL  reduce 27
	OF  reduce 27


state 55
	term : term MULOP factor .  (29)

	.  reduce 29


state 56
	stmt : WHILE expr DO stmts . END  (11)

	END  shift 64
	.  error


state 57
	stmt : REPEAT stmts UNTIL expr .  (12)
	expr : expr . RELOP simple  (24)

	RELOP  shift 38
	SEMI  reduce 12
	VBAR  reduce 12
	ELSE  reduce 12
	END  reduce 12
	UNTIL  reduce 12


state 58
	numbers : NUMBER .  (21)
	numbers : NUMBER . COMMA numbers  (22)

	COMMA  shift 65
	COLON  reduce 21


state 59
	stmt : CASE expr OF cases . END  (15)
	stmt : CASE expr OF cases . ELSE stmts END  (16)

	ELSE  shift 66
	END  shift 67
	.  error


state 60
	cases : case .  (18)
	cases : case . VBAR cases  (19)

	VBAR  shift 68
	ELSE  reduce 18
	END  reduce 18


state 61
	case : numbers . COLON stmts  (20)

	COLON  shift 69
	.  error


state 62
	stmt : IF expr THEN stmts ELSE . stmts END  (10)
	stmt : .  (5)

	IDENT  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	NEWLINE  shift 9
	REPEAT  shift 10
	LOOP  shift 11
	EXIT  shift 12
	CASE  shift 13
	SEMI  reduce 5
	END  reduce 5

	stmts  goto 70
	stmt_list  goto 15
	stmt  goto 16
	name  goto 17


state 63
	stmt : IF expr THEN stmts END .  (9)

	.  reduce 9


state 64
	stmt : WHILE expr DO stmts END .  (11)

	.  reduce 11


state 65
	numbers : NUMBER COMMA . numbers  (22)

	NUMBER  shift 58
	.  error

	numbers  goto 71


state 66
	stmt : CASE expr OF cases ELSE . stmts END  (16)
	stmt : .  (5)

	IDENT  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	NEWLINE  shift 9
	REPEAT  shift 10
	LOOP  shift 11
	EXIT  shift 12
	CASE  shift 13
	SEMI  reduce 5
	END  reduce 5

	stmts  goto 72
	stmt_list  goto 15
	stmt  goto 16
	name  goto 17


state 67
	stmt : CASE expr OF cases END .  (15)

	.  reduce 15


state 68
	cases : case VBAR . cases  (19)
	cases : .  (17)

	NUMBER  shift 58
	ELSE  reduce 17
	END  reduce 17

	cases  goto 73
	case  goto 60
	numbers  goto 61


state 69
	case : numbers COLON . stmts  (20)
	stmt : .  (5)

	IDENT  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	NEWLINE  shift 9
	REPEAT  shift 10
	LOOP  shift 11
	EXIT  shift 12
	CASE  shift 13
	SEMI  reduce 5
	VBAR  reduce 5
	ELSE  reduce 5
	END  reduce 5

	stmts  goto 74
	stmt_list  goto 15
	stmt  goto 16
	name  goto 17


state 70
	stmt : IF expr THEN stmts ELSE stmts . END  (10)

	END  shift 75
	.  error


state 71
	numbers : NUMBER COMMA numbers .  (22)

	.  reduce 22


state 72
	stmt : CASE expr OF cases ELSE stmts . END  (16)

	END  shift 76
	.  error


state 73
	cases : case VBAR cases .  (19)

	.  reduce 19


state 74
	case : numbers COLON stmts .  (20)

	.  reduce 20


state 75
	stmt : IF expr THEN stmts ELSE stmts END .  (10)

	.  reduce 10


state 76
	stmt : CASE expr OF cases ELSE stmts END .  (16)

	.  reduce 16


35 terminals, 14 nonterminals
37 grammar rules, 77 states
